Translation message fixes

--- a/src/templates/settings/sections/_edit.twig
+++ b/src/templates/settings/sections/_edit.twig
@@ -300,7 +300,7 @@
 
     {{ forms.textField({
         label: 'Max Authors'|t('app'),
-        instructions: 'The maximum number of authors entries in this section can have'|t('app'),
+        instructions: 'The maximum number of authors entries in this section can have.'|t('app'),
         id: 'maxAuthors',
         name: 'maxAuthors',
         autocorrect: false,
