--- a/src/templates/settings/categories/_edit.twig
+++ b/src/templates/settings/categories/_edit.twig
@@ -2,6 +2,15 @@
 
 {% set fullPageForm = true %}
 
+{% set formActions = [
+    {
+        label: 'Save and continue editing'|t('app'),
+        redirect: 'settings/categories/{id}'|hash,
+        shortcut: true,
+        retainScroll: true,
+    },
+] %}
+
 {% import '_includes/forms.twig' as forms %}
 
 {% set headlessMode = craft.app.config.general.headlessMode %}
