--- a/src/templates/settings/general/_index.twig
+++ b/src/templates/settings/general/_index.twig
@@ -7,6 +7,15 @@
     { label: "Settings"|t('app'), url: url('settings') }
 ] %}
 
+{% set formActions = [
+    {
+        label: 'Save and continue editing'|t('app'),
+        redirect: 'settings/general'|hash,
+        shortcut: true,
+        retainScroll: true,
+    },
+] %}
+
 {# set defaults #}
 {% set system = {
     name: null,
