Update anchors in form action menu to have button role

--- a/src/templates/_layouts/components/form-action-menu.twig
+++ b/src/templates/_layouts/components/form-action-menu.twig
@@ -5,6 +5,7 @@
             <li>
                 {% set linkAttributes = {
                     tabindex: '0',
+                    role: 'button',
                     class: [
                         'formsubmit',
                         (destructive ?? false) ? 'error',
