--- a/src/templates/users/_auth-methods.twig
+++ b/src/templates/users/_auth-methods.twig
@@ -40,12 +40,8 @@
             </div>
             {{ disclosureMenu(actionMenuItems, {
               buttonAttributes: {
-                class: ['auth-method-action-btn', 'hairline'],
-                removeClass: 'menubtn',
+                class: ['auth-method-action-btn', 'action-btn', 'hairline'],
                 title: 'Actions'|t('app'),
-                data: {
-                  icon: 'ellipsis',
-                },
               },
             }) }}
           </div>
