--- a/src/templates/_components/fieldtypes/Matrix/block.twig
+++ b/src/templates/_components/fieldtypes/Matrix/block.twig
@@ -24,7 +24,7 @@
 {% set actionMenuId = "matrixblock-action-menu--#{entry.uid}" %}
 
 {% set actionBtnAttributes = {
-  class: ['btn', 'settings', 'icon', 'menubtn'],
+  class: ['action-btn', 'btn'],
   type: 'button',
   role: 'button',
   title: 'Actions'|t('app'),
@@ -36,6 +36,95 @@
     'disclosure-trigger': true,
   }
 } %}
+
+{% set actionMenuItems = [
+  {
+    label: 'Collapse'|t('app'),
+    attributes: {
+      data: {icon: 'down-left-and-up-right-to-center', action: 'collapse'},
+    },
+  },
+  {
+    label: 'Expand'|t('app'),
+    attributes: {
+      data: {icon: 'up-right-and-down-left-from-center', action: 'expand'},
+    },
+    liAttributes: {
+      class: ['hidden'],
+    },
+  },
+  {
+    label: 'Disable'|t('app'),
+    attributes: {
+      data: {icon: 'circle-dashed', action: 'disable'},
+    },
+    liAttributes: {
+      class: {
+        hidden: not entry.enabled,
+      }|filter|keys,
+    },
+  },
+  {
+    label: 'Enable'|t('app'),
+    attributes: {
+      data: {icon: 'circle', action: 'enable'},
+    },
+    liAttributes: {
+      class: {
+        hidden: entry.enabled,
+      }|filter|keys,
+    },
+  },
+  {
+    label: 'Move up'|t('app'),
+    attributes: {
+      data: {icon: 'arrow-up', action: 'moveUp'},
+    },
+  },
+  {
+    label: 'Move down'|t('app'),
+    attributes: {
+      data: {icon: 'arrow-down', action: 'moveDown'},
+    },
+  },
+] %}
+
+{% if entry.id %}
+  {% set actionMenuItems = actionMenuItems|merge([
+    {hr: true},
+    {
+      label: 'Open in a new tab'|t('app'),
+      url: entry.getCpEditUrl(),
+      attributes: {
+        target: '_blank',
+        data: {icon: 'external'},
+      },
+    },
+  ]) %}
+{% endif %}
+
+{% if not staticEntries %}
+  {% set actionMenuItems = actionMenuItems|merge([
+    {hr: true},
+    {
+      label: 'Delete'|t('app'),
+      destructive: true,
+      attributes: {
+        data: {icon: 'xmark', action: 'delete'},
+      },
+    },
+    {hr: true},
+  ]) %}
+
+  {% for entryType in entryTypes %}
+    {% set actionMenuItems = actionMenuItems|push({
+      label: 'Add {type} above'|t('app', {type: entryType.name|t('site')}),
+      attributes: {
+        data: {icon: 'plus', action: 'add', type: entryType.handle},
+      },
+    }) %}
+  {% endfor %}
+{% endif %}
 
 {% namespace baseInputName %}
   {% set form = entry.getFieldLayout().createForm(entry, static) %}
@@ -79,29 +168,16 @@
       </div>
 
       <div>
-        <button {{ attr(actionBtnAttributes) }}></button>
-        <div id="{{ actionMenuId }}" class="menu menu--disclosure">
-          <ul>
-            <li><a data-icon="collapse" data-action="collapse" href="#" type="button" role="button" aria-label="{{ 'Collapse'|t('app') }}">{{ "Collapse"|t('app') }}</a></li>
-            <li class="hidden"><a data-icon="expand" data-action="expand" href="#" type="button" role="button" aria-label="{{ 'Expand'|t('app') }}">{{ "Expand"|t('app') }}</a></li>
-            <li{% if not entry.enabled %} class="hidden"{% endif %}><a data-icon="disabled" data-action="disable" href="#" type="button" role="button" aria-label="{{ 'Disable'|t('app') }}">{{ "Disable"|t('app') }}</a></li>
-            <li{% if entry.enabled %} class="hidden"{% endif %}><a data-icon="enabled" data-action="enable" href="#" type="button" role="button" aria-label="{{ 'Enable'|t('app') }}">{{ "Enable"|t('app') }}</a></li>
-            <li><a data-icon="uarr" data-action="moveUp" href="#" type="button" role="button" aria-label="{{ 'Move up'|t('app') }}">{{ 'Move up'|t('app') }}</a></li>
-            <li><a data-icon="darr" data-action="moveDown" href="#" type="button" role="button" aria-label="{{ 'Move down'|t('app') }}">{{ 'Move down'|t('app') }}</a></li>
-          </ul>
-          {% if not staticEntries %}
-            <hr class="padded">
-            <ul>
-              <li><a class="error" data-icon="remove" data-action="delete" href="#" type="button" role="button" aria-label="{{ 'Delete'|t('app') }}">{{ "Delete"|t('app') }}</a></li>
-            </ul>
-            <hr class="padded">
-            <ul>
-              {% for entryType in entryTypes %}
-                <li><a data-icon="plus" data-action="add" data-type="{{ entryType.handle }}" href="#" type="button" role="button" aria-label="{{ 'Add {type} above'|t('app', { type: entryType.name|t('site') }) }}">{{ "Add {type} above"|t('app', { type: entryType.name|t('site') }) }}</a></li>
-              {% endfor %}
-            </ul>
-          {% endif %}
-        </div>
+        {{ disclosureMenu(actionMenuItems, {
+          hiddenLabel: 'Actions'|t('app'),
+          buttonAttributes: {
+            class: ['action-btn'],
+            title: 'Actions'|t('app'),
+            data: {
+              'disclosure-trigger': true,
+            },
+          },
+        }) }}
       </div>
       <a class="move icon" title="{{ 'Reorder'|t('app') }}" aria-label="{{ 'Reorder'|t('app') }}" role="button"></a>
     </div>
