Use Filament's support pacakge
We might need to rip this out, but for now it gives us some nice support

--- a/src/templates/_ui/nav-item.twig
+++ b/src/templates/_ui/nav-item.twig
@@ -1,4 +1,7 @@
-<li {{ attr(attributes) }}>
+<div {{ attributes.class(
+    type).merge({
+    'data-component': handle
+}) }}>
     {% if type == 'heading' %}
         <span>{{ label }}</span>
     {% else %}
@@ -29,8 +32,10 @@
     {% if selected and items | length %}
         <ul class="subnav">
             {% for item in items %}
-                {{ item | raw }}
+                <li>
+                    {{ item | raw }}
+                </li>
             {% endfor %}
         </ul>
     {% endif %}
-</li>
+</div>
