--- a/src/templates/_ui/nav.twig
+++ b/src/templates/_ui/nav.twig
@@ -1,7 +1,13 @@
-<nav {{ attr(attributes) }}>
+<nav {{ attributes.merge({
+    id: id,
+    'aria-label': label,
+    'data-component': handle
+}) }}>
     <ul>
         {% for item in items %}
-            {{ item | raw }}
+            <li>
+                {{ item | raw }}
+            </li>
         {% endfor %}
     </ul>
 </nav>
