--- a/packages/craftcms-sass/_mixins.scss
+++ b/packages/craftcms-sass/_mixins.scss
@@ -130,8 +130,8 @@ $linkColor: #1f5fea;
 
 // menu colors
 $menuOptionColor: $textColor;
-$menuOptionActiveColor: $white;
-$menuOptionActiveBackgroundColor: $grey500;
+$menuOptionActiveColor: $textColor;
+$menuOptionActiveBackgroundColor: $grey050;
 
 // hairline colors
 $hairlineColor: transparentize($grey800, 0.9);
@@ -709,6 +709,7 @@ $radioSize: 16px;
   @include right(9px);
   user-select: none;
   pointer-events: none;
+  color: var(--ui-control-color);
 }
 
 @mixin select-input-styles {
