--- a/src/templates/_includes/disclosuremenu.twig
+++ b/src/templates/_includes/disclosuremenu.twig
@@ -1,5 +1,6 @@
 {% set id = id ?? "menu-#{random()}" %}
 {% set withButton = withButton ?? false %}
+{% set buttonSpinner = buttonSpinner ?? false %}
 
 {% set hasSelected = items|map(i => i.items ?? [i])|flatten(1)|contains('selected') %}
 
@@ -16,6 +17,10 @@
     {{- 'button' }}
   {%- endif %}
 {%- endmacro %}
+
+{% macro color(color) %}
+  {{- color is instance of ('craft\\enums\\Color') ? color.value : color -}}
+{% endmacro %}
 
 {% macro item(item, menuId) %}
   {% set type = _self.itemType(item) %}
@@ -47,7 +52,13 @@
     }|merge(item.attributes ?? {}, recursive=true) %}
       {%- apply spaceless %}
         {% if item.icon ?? false %}
-          <span class="icon">{{ iconSvg(item.icon) }}</span>
+          {{ tag('span', {
+            class: [
+              'icon',
+              _self.color(item.color ?? null),
+            ]|filter,
+            html: iconSvg(item.icon),
+          }) }}
         {% endif %}
         {% if item.status ?? false -%}
           {{ statusIndicator(item.status) }}
@@ -76,7 +87,7 @@
     <span >{{ label }}</span>
   {% endif %}
 
-  {{ tag('button', {
+  {% tag 'button' with {
     class: ['btn', 'menubtn'],
     type: 'button',
     aria: {
@@ -86,9 +97,23 @@
     data: {
       'disclosure-trigger': true,
     },
-    text: buttonLabel ?? null,
-    html: buttonHtml ?? null,
-  }|merge(buttonAttributes ?? {}, recursive=true)) }}
+  }|merge(buttonAttributes ?? {}, recursive=true) %}
+    {%- apply spaceless %}
+      {% if buttonSpinner %}
+        <div role="status" class="visually-hidden"></div>
+      {% endif %}
+      {{ (buttonLabel or buttonHtml) ? tag('div', {
+        class: 'label',
+        text: buttonLabel ?? null,
+        html: buttonHtml ?? null
+      }) }}
+      {% if buttonSpinner %}
+        <div class="spinner spinner-absolute">
+          <span class="visually-hidden">{{ 'Loading'|t('app') }}</span>
+        </div>
+      {% endif %}
+    {% endapply -%}
+  {% endtag %}
 {% endif %}
 
 {% tag 'div' with {
