--- a/src/web/assets/cp/src/css/_main.scss
+++ b/src/web/assets/cp/src/css/_main.scss
@@ -467,10 +467,8 @@ a {
     text-decoration: underline;
   }
 
-  .cp-icon {
-    svg {
-      @include svg-mask(var(--link-color));
-    }
+  .cp-icon svg {
+    @include svg-mask(var(--link-color));
   }
 }
 
@@ -1003,7 +1001,7 @@ td.right {
 
 .icon.move:before {
   content: 'move';
-  color: var(--ui-control-color);
+  color: var(--custom-text-color, var(--ui-control-color));
 }
 
 .icon.move:not(.disabled):hover:before {
@@ -1365,6 +1363,19 @@ ul.icons {
   align-items: center;
   align-content: stretch;
   gap: var(--s);
+
+  &.flex-gap-xs {
+    gap: var(--xs);
+  }
+  &.flex-gap-m {
+    gap: var(--m);
+  }
+  &.flex-gap-l {
+    gap: var(--l);
+  }
+  &.flex-gap-xl {
+    gap: var(--xl);
+  }
 
   &:not(.flex-nowrap) {
     flex-wrap: wrap;
@@ -2826,6 +2837,12 @@ table {
   border-bottom: none !important;
 }
 
+.chip,
+.card {
+  color: var(--custom-text-color, var(--text-color));
+  background-color: var(--custom-bg-color, var(--gray-050));
+}
+
 /* chips */
 .chip {
   position: relative;
@@ -2838,7 +2855,6 @@ table {
   max-width: 100%;
   gap: var(--xs);
   border-radius: var(--large-border-radius);
-  background-color: var(--gray-050);
 
   &.small {
     flex-direction: row;
@@ -2886,6 +2902,7 @@ table {
   li.sel &,
   li.active-drop-target & {
     --text-color: var(--white);
+    --custom-text-color: var(--white) !important;
     --medium-dark-text-color: var(--white);
     --medium-text-color: var(--white);
     --light-text-color: var(--white);
@@ -2893,7 +2910,14 @@ table {
     --ui-control-color: var(--white);
     @include custom-color-focus-ring(hsl(var(--light-focus-hsl)));
     color: var(--white);
-    background-color: var(--dark-sel-color) !important;
+    background-color: var(
+      --custom-sel-bg-color,
+      var(--dark-sel-color)
+    ) !important;
+
+    .cp-icon {
+      --icon-color: var(--white) !important;
+    }
   }
 
   &.sel,
@@ -2960,10 +2984,10 @@ table {
     height: var(--thumb-size);
     max-width: var(--thumb-size) !important;
     max-height: var(--thumb-size) !important;
-    @include svg-mask(var(--ui-control-color));
+    @include svg-mask(var(--icon-color, var(--ui-control-color)));
   }
 
-  &.small svg {
+  &.small {
     --thumb-size: calc(14rem / 16);
   }
 }
@@ -2973,6 +2997,9 @@ table {
   display: flex;
   align-items: flex-start;
   gap: var(--xs);
+  --custom-bg-color: initial;
+  --custom-text-color: initial;
+  --custom-sel-bg-color: initial;
 
   &:not(.inline-chips) {
     flex-direction: column;
@@ -3009,10 +3036,8 @@ table {
   padding: var(--m);
   gap: var(--l);
   border-radius: var(--large-border-radius);
-  background-color: var(--gray-050);
   cursor: default;
   user-select: none;
-  color: var(--medium-text-color);
 
   &:after {
     border-radius: var(--large-border-radius);
@@ -3021,6 +3046,7 @@ table {
   &.sel,
   li.sel & {
     --text-color: var(--white);
+    --custom-text-color: var(--white) !important;
     --medium-dark-text-color: var(--white);
     --medium-text-color: var(--white);
     --light-text-color: var(--white);
@@ -3028,7 +3054,10 @@ table {
     --ui-control-color: var(--white);
     @include custom-color-focus-ring(hsl(var(--light-focus-hsl)));
     color: var(--white);
-    background-color: var(--dark-sel-color) !important;
+    background-color: var(
+      --custom-sel-bg-color,
+      var(--dark-sel-color)
+    ) !important;
 
     & > .thumb {
       background-color: var(--dark-sel-color) !important;
@@ -3256,17 +3285,21 @@ table {
     & > .move {
       @include touch-target;
       margin: 0 -4px;
+      &:before {
+        color: var(--custom-text-color, var(--ui-control-color));
+      }
     }
 
     .action-btn {
-      color: var(--ui-control-color);
+      background-color: transparent;
 
       &:before {
         @include margin-right(0 !important);
       }
 
-      &:not(:hover):not(:active) {
-        background-color: transparent;
+      &:hover,
+      &:active {
+        backdrop-filter: brightness(90%);
       }
     }
 
@@ -4019,86 +4052,171 @@ ul.tree,
   background-image: linear-gradient(60deg, #184cef, #e5422b);
   background-origin: border-box;
 }
-
 .status.on,
 .status.live,
 .status.active,
 .status.enabled {
   background-color: var(--enabled-color);
 }
-
-.gray,
-.grey {
-  background-color: var(--gray-300);
-}
-.red,
+.status.red,
+.bg-red,
 .status.off,
 .status.suspended,
 .status.expired {
   background-color: var(--disabled-color);
 }
-.orange,
+.status.orange,
+.bg-orange,
 .status.pending {
   background-color: var(--pending-color);
 }
-.amber {
+.status.amber,
+.bg-amber {
   background-color: var(--amber-500);
 }
-.yellow {
-  background-color: var(--yellow-300);
+.status.yellow,
+.bg-yellow {
+  background-color: var(--yellow-500);
 }
-.lime {
+.status.lime,
+.bg-lime {
   background-color: var(--lime-500);
 }
-.green {
-  background-color: var(--green-500);
+.status.green,
+.bg-green {
+  background-color: var(--green-600);
 }
-.emerald {
+.status.emerald,
+.bg-emerald {
   background-color: var(--emerald-500);
 }
-.teal,
-.turquoise {
+.status.teal,
+.bg-teal,
+.status.turquoise,
+.bg-turquoise {
   background-color: var(--teal-500);
 }
-.cyan {
+.status.cyan,
+.bg-cyan {
   background-color: var(--cyan-500);
 }
-.sky {
+.status.sky,
+.bg-sky {
   background-color: var(--sky-500);
 }
-.blue {
+.status.blue,
+.bg-blue {
   background-color: var(--blue-600);
 }
-.indigo {
+.status.indigo,
+.bg-indigo {
   background-color: var(--indigo-500);
 }
-.violet {
+.status.violet,
+.bg-violet {
   background-color: var(--violet-500);
 }
-.purple {
+.status.purple,
+.bg-purple {
   background-color: var(--purple-500);
 }
-.fuchsia {
+.status.fuchsia,
+.bg-fuchsia {
   background-color: var(--fuchsia-500);
 }
-.pink {
+.status.pink,
+.bg-pink {
   background-color: var(--pink-500);
 }
-.rose {
+.status.rose,
+.bg-rose {
   background-color: var(--rose-500);
 }
-
 .status.light {
   background-color: var(--gray-100);
 }
-
-.black {
+.status.white,
+.bg-white {
+  background-color: var(--white);
+}
+.status.black,
+.bg-black {
   background-color: var(--gray-800);
+}
+.status.gray,
+.bg-gray,
+.status.grey,
+.bg-grey {
+  background-color: var(--gray-300);
 }
 
 .status.white,
 .status.disabled {
   opacity: 1;
+}
+
+.icon,
+.cp-icon {
+  &.red {
+    --icon-color: var(--disabled-color);
+  }
+  &.orange {
+    --icon-color: var(--pending-color);
+  }
+  &.amber {
+    --icon-color: var(--amber-500);
+  }
+  &.yellow {
+    --icon-color: var(--yellow-500);
+  }
+  &.lime {
+    --icon-color: var(--lime-500);
+  }
+  &.green {
+    --icon-color: var(--green-500);
+  }
+  &.emerald {
+    --icon-color: var(--emerald-500);
+  }
+  &.teal {
+    --icon-color: var(--teal-500);
+  }
+  &.cyan {
+    --icon-color: var(--cyan-500);
+  }
+  &.sky {
+    --icon-color: var(--sky-500);
+  }
+  &.blue {
+    --icon-color: var(--blue-600);
+  }
+  &.indigo {
+    --icon-color: var(--indigo-500);
+  }
+  &.violet {
+    --icon-color: var(--violet-500);
+  }
+  &.purple {
+    --icon-color: var(--purple-500);
+  }
+  &.fuchsia {
+    --icon-color: var(--fuchsia-500);
+  }
+  &.pink {
+    --icon-color: var(--pink-500);
+  }
+  &.rose {
+    --icon-color: var(--rose-500);
+  }
+  &.white {
+    --icon-color: var(--white);
+  }
+  &.black {
+    --icon-color: var(--gray-800);
+  }
+  &.gray {
+    --icon-color: var(--gray-300);
+  }
 }
 
 /* ----------------------------------------
@@ -4430,7 +4548,7 @@ ul.tree,
         position: relative;
         padding: 0 var(--padding);
         white-space: nowrap;
-        color: var(--tab-label-color);
+        color: var(--custom-text-color, var(--tab-label-color));
         height: 50px;
       }
 
@@ -4446,10 +4564,8 @@ ul.tree,
         }
       }
 
-      &:not(.sel) {
-        &:hover {
-          background-color: transparentize($grey300, 0.85);
-        }
+      &:not(.sel):hover {
+        backdrop-filter: brightness(95%);
       }
 
       &.sel {
@@ -4459,10 +4575,10 @@ ul.tree,
         z-index: 1;
         cursor: default;
         box-shadow:
-          inset 0 2px 0 var(--highlight-color),
+          inset 0 2px 0 var(--custom-text-color, var(--highlight-color)),
           0 0 0 1px $hairlineColor,
           0 2px 12px transparentize($grey200, 0.5);
-        background-color: var(--white);
+        background-color: var(--white) !important;
       }
 
       span[data-icon] {
@@ -6069,13 +6185,6 @@ $min2ColWidth: 400px;
           @include padding-left(32px);
 
           &.sel {
-            &:before {
-            }
-          }
-
-          &.sel {
-            background: var(--gray-050);
-
             &:not([data-icon]):before {
               @include floatleft;
               @include margin(4px, 0, 0, -22px);
@@ -6200,7 +6309,7 @@ $min2ColWidth: 400px;
       top: 1px;
       width: 100%;
       height: 100%;
-      @include svg-mask(var(--ui-control-color));
+      @include svg-mask(var(--icon-color, var(--ui-control-color)));
     }
 
     &.error {
@@ -6216,36 +6325,34 @@ $min2ColWidth: 400px;
   }
 }
 
-.menu:not(.menu--disclosure) ul li,
-.menu:not(.menu--disclosure):not(:hover) ul li {
-  a,
-  .menu-item,
-  .menu-option {
-    &:not(.sel):not(.disabled):hover {
-      @include menu-item-active-styles;
-      --text-color: var(--white);
-      --light-text-color: var(--gray-100);
-      --ui-control-color: var(--gray-050);
-      --ui-control-hover-color: var(--gray-100);
-      --ui-control-active-color: var(--gray-100);
+.menu:not(.menu--disclosure) ul li a:not(.sel):not(.disabled):hover,
+.menu:not(.menu--disclosure) ul li .menu-item:not(.sel):not(.disabled):hover,
+.menu:not(.menu--disclosure) ul li .menu-option:not(.sel):not(.disabled):hover,
+.menu:not(.menu--disclosure):not(:hover) ul li a:not(.sel):not(.disabled).hover,
+.menu:not(.menu--disclosure):not(:hover)
+  ul
+  li
+  .menu-item:not(.sel):not(.disabled).hover,
+.menu:not(.menu--disclosure):not(:hover)
+  ul
+  li
+  .menu-option:not(.sel):not(.disabled).hover {
+  @include menu-item-active-styles;
 
-      span.icon,
-      &:before,
-      div.code {
-        color: var(--menu-item-active-color);
-      }
+  span.icon,
+  &:before,
+  div.code {
+    color: var(--menu-item-active-color);
+  }
 
-      &.error {
-        color: var(--menu-item-active-color) !important;
-      }
+  &.error {
+    color: var(--menu-item-active-color) !important;
+  }
 
-      span.light {
-        color: var(--white) !important;
-      }
-    }
+  span.light {
+    color: var(--white) !important;
   }
 }
-
 .menu {
   hr.padded,
   .h6.padded,
@@ -6554,7 +6661,6 @@ fieldset {
     & > label,
     & > legend {
       font-weight: bold;
-      color: var(--medium-dark-text-color);
 
       code {
         font-size: 1em !important;
@@ -6611,7 +6717,7 @@ fieldset {
 // BC
 .field > .heading > .instructions,
 .checkboxfield .instructions {
-  color: var(--medium-text-color);
+  color: var(--custom-text-color, var(--medium-text-color));
 
   img,
   video,
@@ -7836,8 +7942,8 @@ $titlebarBorderRadius: calc(var(--large-border-radius) - 1px);
   margin-bottom: 10px;
   padding: 0 var(--m) var(--m);
   border-radius: var(--large-border-radius);
-  border: 1px solid var(--hairline-color);
-  background-color: var(--gray-050);
+  border: 2px solid var(--gray-100);
+  background-color: var(--white);
 
   &.static {
     .titlebar {
@@ -7852,10 +7958,12 @@ $titlebarBorderRadius: calc(var(--large-border-radius) - 1px);
     padding: 0;
     width: var(--touch-target-size);
     height: var(--touch-target-size);
-    color: var(--ui-control-color);
+    color: var(--custom-text-color, var(--ui-control-color));
+    background-color: transparent;
 
-    &:not(:hover):not(:active) {
-      background-color: transparent;
+    &:hover,
+    &:active {
+      backdrop-filter: brightness(90%);
     }
   }
 
@@ -7869,11 +7977,11 @@ $titlebarBorderRadius: calc(var(--large-border-radius) - 1px);
     flex-wrap: nowrap;
     align-items: center;
     gap: var(--s);
-    margin: 0 -14px;
+    margin: 0 calc(var(--m) * -1);
     box-sizing: border-box;
     border-radius: $titlebarBorderRadius $titlebarBorderRadius 0 0;
-    @include padding(5px, 70px, 5px, 35px);
-    color: var(--light-text-color);
+    @include padding(5px, calc(var(--m) + 70px), 5px, var(--m));
+    color: var(--custom-text-color, var(--light-text-color));
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
@@ -7881,12 +7989,8 @@ $titlebarBorderRadius: calc(var(--large-border-radius) - 1px);
     cursor: default;
     user-select: none;
     position: relative;
-    background-color: darken($grey050, 2%);
-
-    & > .blocktype {
-      display: inline;
-      color: var(--medium-text-color);
-    }
+    background-color: var(--gray-050);
+    min-height: calc(var(--lh) + 10px);
 
     & > .preview {
       flex-grow: 1;
@@ -7942,19 +8046,11 @@ $titlebarBorderRadius: calc(var(--large-border-radius) - 1px);
           }
 
           [role='tab'] {
-            background-color: #ebf2fa;
+            background-color: transparent;
 
             .tab-label {
               height: 30px;
               padding: 0 var(--m);
-            }
-
-            &:not(.sel):hover {
-              background-color: transparentize($grey300, 0.85);
-            }
-
-            &.sel {
-              background-color: var(--gray-050);
             }
           }
         }
@@ -7973,7 +8069,7 @@ $titlebarBorderRadius: calc(var(--large-border-radius) - 1px);
 
   &.disabled-entry {
     & > .titlebar {
-      @include padding-right(90px);
+      @include padding-right(100px);
     }
 
     & > .actions {
@@ -7987,8 +8083,7 @@ $titlebarBorderRadius: calc(var(--large-border-radius) - 1px);
 
   &.collapsed {
     & > .titlebar {
-      border-radius: var(--titlebar-border-radius);
-      border-bottom: none;
+      border-radius: calc(var(--large-border-radius) - 2px);
 
       & > .preview {
         opacity: 1;
@@ -7996,26 +8091,17 @@ $titlebarBorderRadius: calc(var(--large-border-radius) - 1px);
     }
   }
 
-  & > .checkbox {
-    position: absolute;
-    top: 7px;
-    @include left(14px);
-  }
-
   & > .actions {
     display: flex;
     align-items: center;
+    gap: var(--xs);
     position: absolute;
     top: 3px;
-    @include right(14px);
+    @include right(var(--m));
     cursor: default;
 
     & > * {
-      @include margin(0, 0, 0, 5px);
-    }
-
-    .action-btn:before {
-      @include margin-right(0 !important);
+      margin: 0 !important;
     }
 
     & > .status {
@@ -8031,12 +8117,6 @@ $titlebarBorderRadius: calc(var(--large-border-radius) - 1px);
       color: var(--dark-hairline-color);
       transform: color linear 100ms;
 
-      &.settings:after {
-        @include margin-left(3px);
-        border-color: var(--dark-hairline-color);
-        transform: border-color linear 100ms;
-      }
-
       &:hover {
         color: var(--link-color);
 
@@ -8049,7 +8129,7 @@ $titlebarBorderRadius: calc(var(--large-border-radius) - 1px);
 
   &:not(.static) {
     & > .fields {
-      padding-top: 14px;
+      padding-top: var(--l);
     }
   }
 
