--- a/src/templates/_components/fieldtypes/Matrix/block.twig
+++ b/src/templates/_components/fieldtypes/Matrix/block.twig
@@ -123,7 +123,7 @@
 {% endif %}
 
 {% namespace baseInputName %}
-  {% set form = entry.getFieldLayout().createForm(entry, static) %}
+  {% set form = entry.getFieldLayout().createForm(entry, static, {'errorKeyPrefix' : name ~ '[' ~ entry.uid ~ ']'}) %}
   {% set tabs = form.getTabMenu() %}
 {% endnamespace %}
 
