--- a/src/templates/_components/fieldtypes/Matrix/block.twig
+++ b/src/templates/_components/fieldtypes/Matrix/block.twig
@@ -4,25 +4,6 @@
 {% set baseInputName = "#{name}[entries][uid:#{entry.uid}]" %}
 {% set static = static ?? false %}
 {% set staticEntries = staticEntries ?? false %}
-{% set entryAttributes = {
-  class: [
-    'matrixblock',
-    not entry.enabled ? 'disabled-entry',
-    static ? 'static',
-  ]|filter,
-  style: {
-    'border-color': entryType.color.cssVar(100) ?? null,
-  }|filter,
-  data: {
-    uid: entry.uid,
-    type: entryType.handle,
-    'type-name': entryTypeName,
-    collapsed: entry.collapsed,
-    'type-id': entry.typeId,
-    'field-layout-id': entry.getFieldLayout().id
-  },
-  role: 'listitem',
-} %}
 
 {% set actionBtnLabel = "#{entryTypeName} #{'Actions'|t('app')}" %}
 {% set actionMenuId = "matrixblock-action-menu--#{entry.uid}" %}
@@ -127,7 +108,25 @@
   {% set tabs = form.getTabMenu() %}
 {% endnamespace %}
 
-<div {{ attr(entryAttributes) }}>
+{% tag 'div' with {
+  class: [
+    'matrixblock',
+    not entry.enabled ? 'disabled-entry',
+    static ? 'static',
+  ]|filter,
+  style: {
+    'border-color': entryType.color.cssVar(100) ?? null,
+  }|filter,
+  data: {
+    uid: entry.uid,
+    type: entryType.handle,
+    'type-name': entryTypeName,
+    collapsed: entry.collapsed,
+    'type-id': entry.typeId,
+    'field-layout-id': entry.getFieldLayout().id,
+  },
+  role: 'listitem',
+} %}
   {% if not static %}
     {{ hiddenInput("#{name}[sortOrder][]", entry.uid) }}
     {# only register a delta name for this entry if it’s not new #}
@@ -166,19 +165,24 @@
       {% endtag %}
     {% endif %}
     <div class="preview"></div>
-    {% tag 'div' with {
-      class: ['matrixblock-tabs'],
-      style: {
-        '--custom-sel-tab-shadow-color': entryType.color.cssVar(200) ?? null,
-      }|filter,
-    } %}
-      {% namespace baseInputName %}
-        {% if tabs|length > 1 %}
-          {% include '_includes/tabs.twig' with {'tabs': tabs, 'containerAttributes': {'id': 'tabs'}} %}
-        {% endif %}
-      {% endnamespace %}
-    {% endtag %}
-  {% endtag %}
+    {% if tabs|length > 1 %}
+      {% tag 'div' with {
+        class: ['matrixblock-tabs'],
+        style: {
+          '--custom-sel-tab-shadow-color': entryType.color.cssVar(200) ?? null,
+        }|filter,
+      } %}
+        {% namespace baseInputName %}
+          {% include '_includes/tabs.twig' with {
+            tabs,
+            containerAttributes: {
+              id: 'tabs',
+            },
+          } %}
+        {% endnamespace %}
+      {% endtag %}
+    {% endif %}
+  {% endtag %}{# /.titlebar #}
 
   {% if not static %}
     <div class="actions">
@@ -210,4 +214,4 @@
       {{ form.render()|raw }}
     {% endnamespace %}
   </div>
-</div>
+{% endtag %}{# /.matrixblock #}
