improved matrix tab height at text only zoom levels

--- a/src/web/assets/cp/src/css/_main.scss
+++ b/src/web/assets/cp/src/css/_main.scss
@@ -8077,7 +8077,7 @@ body.setup-2fa {
             background-color: transparent;
 
             .tab-label {
-              height: 30px;
+              height: calc(var(--lh) + 10px);
               padding: 0 var(--m);
             }
           }
