added button role, removed tabindex

--- a/src/templates/_includes/tabs.twig
+++ b/src/templates/_includes/tabs.twig
@@ -84,7 +84,7 @@
                         data: {
                             id: containerId,
                         },
-                        tabindex: '0',
+                        role: 'button'
                     } %}
                         {{ tab.label }}
                         {% if 'error' in tab.class %}
