--- a/src/templates/_components/fieldtypes/Matrix/block.twig
+++ b/src/templates/_components/fieldtypes/Matrix/block.twig
@@ -119,11 +119,15 @@
   }|filter,
   data: {
     uid: entry.uid,
+    'owner-id': entry.ownerId,
+    'field-id': entry.fieldId,
     type: entryType.handle,
     'type-name': entryTypeName,
     collapsed: entry.collapsed,
     'type-id': entry.typeId,
     'field-layout-id': entry.getFieldLayout().id,
+    'visible-layout-elements': form.getVisibleElements(),
+    'base-input-name': baseInputName|namespaceInputName,
   },
   role: 'listitem',
 } %}
@@ -165,23 +169,18 @@
       {% endtag %}
     {% endif %}
     <div class="preview"></div>
-    {% if tabs|length > 1 %}
-      {% tag 'div' with {
-        class: ['matrixblock-tabs'],
-        style: {
-          '--custom-sel-tab-shadow-color': entryType.color.cssVar(200) ?? null,
-        }|filter,
-      } %}
+    {% tag 'div' with {
+      class: ['matrixblock-tabs'],
+      style: {
+        '--custom-sel-tab-shadow-color': entryType.color.cssVar(200) ?? null,
+      }|filter,
+    } %}
+      {% if tabs|length > 1 %}
         {% namespace baseInputName %}
-          {% include '_includes/tabs.twig' with {
-            tabs,
-            containerAttributes: {
-              id: 'tabs',
-            },
-          } %}
+          {% include '_includes/tabs.twig' %}
         {% endnamespace %}
-      {% endtag %}
-    {% endif %}
+      {% endif %}
+    {% endtag %}
   {% endtag %}{# /.titlebar #}
 
   {% if not static %}
