Matrix create button label improvements
Resolves #14210

--- a/src/templates/_components/fieldtypes/Matrix/input.twig
+++ b/src/templates/_components/fieldtypes/Matrix/input.twig
@@ -15,7 +15,7 @@
     <div class="buttons">
       {% if singleType %}
         {{ forms.button({
-          label: 'Add an entry'|t('app'),
+          label: createButtonLabel,
           class: ['dashed', 'add', 'icon'],
           spinner: true,
           attributes: {
@@ -40,7 +40,7 @@
             },
           },
         }), {
-          buttonLabel: 'Add an entry'|t('app'),
+          buttonLabel: createButtonLabel,
           buttonSpinner: true,
           buttonAttributes: {
             class: ['dashed', 'add', 'icon'],
