Fixed chip label focus rings
Resolves #14222

[ci skip]

--- a/src/web/assets/cp/src/css/_main.scss
+++ b/src/web/assets/cp/src/css/_main.scss
@@ -3351,6 +3351,10 @@ table {
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
+
+      &:focus {
+        box-shadow: var(--inner-focus-ring);
+      }
     }
 
     .segment:after {
