Drop multi-column card views
Resolves #14202

--- a/src/templates/_elements/cards.twig
+++ b/src/templates/_elements/cards.twig
@@ -2,7 +2,7 @@
 {% set disabled = disabled ?? null %}
 {% set viewMode = viewMode ?? null %}
 
-<ul class="elements cards card-grid">
+<ul class="elements cards">
   {%- apply spaceless  %}
     {% for element in elements %}
       <li>
