--- a/src/templates/_includes/forms/textarea.twig
+++ b/src/templates/_includes/forms/textarea.twig
@@ -22,6 +22,7 @@
         describedby: describedBy ?? false,
     },
     data: {
+        'deprecated': true,
         'show-chars-left': showCharsLeft ?? false,
     },
 }|merge(inputAttributes ?? [], recursive=true) %}
