--- a/src/web/assets/cp/src/css/craft.scss
+++ b/src/web/assets/cp/src/css/craft.scss
@@ -10,3 +10,25 @@
 @import 'image_editor';
 @import 'shame';
 @import 'debug_toolbar';
+
+[data-deprecated] {
+  outline: 1px solid rgba(255, 0, 0, 0.5);
+}
+
+//[data-component] {
+//  position: relative;
+//
+//  &::after {
+//    content: attr(data-component);
+//    position: absolute;
+//    right: 0;
+//    line-height: 1.2;
+//    padding: 0 0.25em;
+//    font-family: monospace;
+//    font-size: 10px;
+//    background-color: green;
+//    color: white;
+//  }
+//
+//  outline: 1px solid rgba(0, 255, 0, 0.5);
+//}
