Modify nav item value for aria-current

--- a/src/templates/_layouts/components/global-sidebar.twig
+++ b/src/templates/_layouts/components/global-sidebar.twig
@@ -23,7 +23,7 @@
                     href: url(item.url),
                     class: item.sel ? 'sel',
                     aria: {
-                        current: item.sel and not item.subnav ? 'page' : false,
+                        current: item.sel and not item.subnav ? item.current : false,
                     },
                 } %}
                 <li {{ attr(itemAttributes) }}>
