--- a/src/templates/_includes/forms/languageMenu.twig
+++ b/src/templates/_includes/forms/languageMenu.twig
@@ -1,13 +1,13 @@
 {% set id = id ?? "languagemenu#{random()}" %}
 {% set value = value ?? null -%}
 {% set options = options ?? [] %}
+{% set appOnly = appOnly ?? false %}
 
 
 {% if includeEnvVars ?? false %}
-    {% set options = options|merge(craft.cp.getLanguageEnvOptions()) %}
+    {% set options = options|merge(craft.cp.getLanguageEnvOptions(appOnly)) %}
 {% endif %}
 
-{% include '_includes/forms/selectize'  with {
+{% include '_includes/forms/selectize' with {
     includeEnvVars: false,
-    value: value,
-}%}
+} %}
