--- a/src/templates/users/_preferences.twig
+++ b/src/templates/users/_preferences.twig
@@ -3,13 +3,15 @@
 <div>
   <h2>{{ 'General'|t('app') }}</h2>
 
-  {{ forms.selectizeField({
+  {{ forms.languageMenuField({
     id: 'preferredLanguage',
     name: 'preferredLanguage',
     label: 'Language'|t('app'),
     instructions: 'The language that the control panel should use.'|t('app'),
-    options: languageOptions,
+    options: craft.cp.getLanguageOptions(false, true, true, true),
     value: userLanguage,
+    includeEnvVars: true,
+    appOnly: true,
   }) }}
 
   {{ forms.languageMenuField({
