--- a/src/templates/settings/assets/settings.twig
+++ b/src/templates/settings/assets/settings.twig
@@ -54,7 +54,7 @@
             id: 'tempUploadLocation',
             label: 'Temp Uploads Location'|t('app'),
             instructions: 'Where do you want to store temporary asset uploads?'|t('app'),
-            warning: allVolumes is empty ? 'No volumes exist yet.'|t('app') : 'Don’t select a volume that’s used by any Assets fields.',
+            warning: allVolumes is empty ? 'No volumes exist yet.'|t('app') : 'It’s not recommended to choose a volume that’s used by any Assets fields.',
         }, tempVolumeInput) }}
 
         <div class="buttons">
