--- a/src/templates/_components/fieldtypes/Matrix/settings.twig
+++ b/src/templates/_components/fieldtypes/Matrix/settings.twig
@@ -171,6 +171,19 @@
 }) }}
 
 {% tag 'div' with {
+    id: "view-mode--#{constant('VIEW_MODE_CARDS', field)}",
+    class: field.viewMode != constant('VIEW_MODE_CARDS', field) ? 'hidden' : null,
+} %}
+    {{ forms.lightswitchField({
+        label: 'Show cards in a grid'|t('app'),
+        instructions: 'Whether cards should be shown in a multi-column grid on wide viewports.'|t('app'),
+        id: 'show-cards-in-grid',
+        name: 'showCardsInGrid',
+        on: field.showCardsInGrid,
+    }) }}
+{% endtag %}
+
+{% tag 'div' with {
     id: "view-mode--#{constant('VIEW_MODE_INDEX', field)}",
     class: field.viewMode != constant('VIEW_MODE_INDEX', field) ? 'hidden' : null,
 } %}
