--- a/src/web/assets/cp/src/css/_cp.scss
+++ b/src/web/assets/cp/src/css/_cp.scss
@@ -1449,6 +1449,11 @@ li.breadcrumb-toggle-wrapper {
       @include margin-left(-7px);
     }
   }
+
+  .card-grid {
+    display: flex !important;
+    flex-direction: column;
+  }
 }
 
 @media print {
